math.ebnf
// Currently not supporting implicit multiplication

expression = term
term       = product ((PLUS | MINUS) term)?
product    = unary (DOT product | (LEFT_PAREN expression RIGHT_PAREN | IDENTIFIER | PARAMETER | SIN | COS | TAN | SQRT | LN | LOG)+)?
unary      = (PLUS | MINUS) unary | exponent 
exponent   = quotient (CARET exponent)?
quotient   = func | FRACTION quotient quotient
func       = (SIN | COS | TAN | SQRT | LN | LOG) func | primary 
primary    = REAL | IDENTIFIER | PARAMETER | LEFT_PAREN expression RIGHT_PAREN
